# Data.Structure-Projects

./: cmake
cmak/: CMakeLists.txt
cmak/apps/: a1_stock_span.cpp  a2_balanced_parentheses.cpp  a3_awesome_application.cpp  analyzeDNA.cpp  analyzeECG.cpp  calculator.cpp  countDNA.cpp  count_words.cpp  heron.cpp  main.cpp  test_tree.cpp  unique_words.cpp
cmak/built/: CMakeCache.txt  Heron  Makefile  cmake_install.cmake  sbe201_unique_words
cmak/dataset/: genetic_data-dna.txt
cmak/libarary/: arrays.hpp  bst.hpp  cmap.hpp  dna.hpp  ecg.hpp  helpers-arrys.hpp  helpers.hpp  map.hpp  mathematics.hpp  member1.hpp  member2.hpp  member3.hpp  member4.hpp  member5.hpp  member6.hpp  set.hpp
